--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/images/Brain.jpg" alt="Big Brain" height="300" width="400"></td>
+      <td><img src="images/Brain.jpg" alt="Big Brain" height="300" width="400"></td>
       <td>
         <h1>Brandon Grover</h1>
         <p><em>Current Student of Self Learning</em></p>
